<resources>
    <string name="app_name">Learn English</string>
    <string name="fifty_famous_stories">Fifty famous stories</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_the_password">re-enter the password</string>
    <string name="confirm_password">confirm password</string>
    <string name="learn_english">Learn English</string>
    <string name="moto">Language is the \"the infinite use of finite means\"</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="activate">Activate</string>
    <string name="xxxx">XXXX-XXXX-XXXX-XXXX</string>
    <string name="log_out">Log out</string>
    <string name="file">File</string>
    <string name="premium_account">Premium account</string>
    <string name="per_month">$4.9</string>
</resources>
